[8071] coderabbit adjustments